--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/Users/laurine.hetterscheid/SoftwareSystems/Java/ss/softwaresystems","type":"PROJECT","hints":{"PROJECT_NAME":"softwaresystems"}},"ABSENT"]]
