added all files past weeks

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Users/laurine.hetterscheid/SoftwareSystems/Java/ss/softwaresystems","type":"PROJECT","hints":{"PROJECT_NAME":"softwaresystems"}},"ABSENT"],[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_191.jdk/Contents/Home","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
+[[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_191.jdk/Contents/Home","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
